# workscheduler-openenv

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  models.py  scheduler.py
server/: Dockerfile
tasks/: easy.py  expert.py  hard.py  medium.py  multi.py
