[project]
name = "workscheduler-openenv"
version = "1.0.0"
description = "A real-world AI agent environment for task scheduling"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "pyyaml>=6.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
workscheduler-openenv = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"